# musicMatch

./: README.md  demo.db  demo1.db  genres.cpp  genres.h  get_artistid.cpp  get_artistid.h  get_audiofeatures.cpp  get_audiofeatures.h  get_trackid.cpp  main.cpp  spotifyapi_bruv.cpp  spotifyapi_bruv.cpp.cpp  tokenize_parse.cpp  tokenize_parse.h  union_algorithm.cpp
cpr/: cprver.h
database/: music_match00.db
features/: genres.cpp  get_artistid.cpp  get_audiofeatures.cpp  get_trackid.cpp  tokenize_parse.cpp
include/: genres.h  get_artistid.h  get_audiofeatures.h  get_trackid.h  tokenize_parse.h
music_match/: CMakeLists.txt  calling_api.cpp  calling_api.h  database.cpp  database.h  demo.db  fourth_page.cpp  fourth_page.h  fourth_page.ui  genres.cpp  genres.h  get_artistid.cpp  get_artistid.h  get_audiofeatures.cpp  get_audiofeatures.h  get_trackid.cpp  get_trackid.h  last_page.cpp  last_page.h  last_page.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  second_page.cpp  second_page.h  second_page.ui  third_page.cpp  third_page.h  third_page.ui  tokenize_parse.cpp  tokenize_parse.h
music_match_backend/: get_trackid.h  main.cpp  music_match.sln  music_match.vcxproj  music_match.vcxproj.filters  music_match00.db  tokenize_parse.h
